# siwar-api

./: CONTRIBUTORS.md  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  xx
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: python-package.yml  release.yml
src/siwar/: __init__.py  client.py  constants.py  models.py  utils.py
src/siwar/models/: __init__.py  core.py
tests/: __init__.py  test_client.py
tests/data/: search_response.json
