[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siwar-api"
version = "0.1.0"
description = "Python wrapper for the Siwar Arabic Lexicon API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Osama Ata", email = "me@osamata.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.910",
    "flake8>=3.9.0",
    "black>=22.0.0",
    "isort>=5.9.0",
]
