[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siwar-api"
version = "0.1.0"
description = "Python wrapper for the Siwar Arabic Lexicon API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Osama Ata", email = "me@osamata.com"}
]
dependencies = [
    "requests>=2.25.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.910",
    "flake8>=3.9.0",
    "black>=22.0.0",
    "isort>=5.9.0",
    "types-requests>=2.25.0",
    "responses>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["siwar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=siwar --cov-report=xml --cov-report=term-missing"
